# Nepse-Scrapper

./: .env  .env.example  .gitignore  Pipfile  Procfile  build.sh  celerydb.sqlite3  db.sqlite3  manage.py  mobile_config.py  pyproject.toml  render.yaml  render_init.py  requirements.txt  start_mobile_server.py  start_nepse_server.sh  test_api_directly.py  test_nepse_scraper.py  test_scraping.py
nepse_data/: admin.py  api_views.py  apps.py  models.py  scheduler.py  scrapers.py  serializers.py  tasks.py  top_views.py  urls.py  views.py
nepse_data/management/commands/: scrape_nepse.py  urls.py
nepse_data/migrations/: 0001_initial.py  0002_topgainers_toplosers.py
nepse_scraper/: api_schema.py  apps.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
nepse_scrapper/: asgi.py  celery.py  settings.py  urls.py
scrapers/: admin.py  apps.py  data_processor.py  direct_nepse_scraper.py  final_working_client.py  merolagani_scraper.py  models.py  serializers.py  startup.py  tasks.py  unofficial_client_final.py  urls.py  views.py
scrapers/management/commands/: run_scraping.py  scrape_data.py  scrape_official.py
scrapers/migrations/: 0001_initial.py  0002_alter_company_options_alter_marketstatus_options_and_more.py  0003_remove_stockdata_scrapers_st_scrape__dab174_idx_and_more.py
