[tool.poetry]
name = "nepse-scraper"
version = "1.0.0"
description = "NEPSE Stock Market Data Scraper"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
django-cors-headers = "^4.0"
djangorestframework = "^3.14"
drf-yasg = "^1.21"
celery = "^5.3"
redis = "^4.6"
django-celery-beat = "^2.6"
django-celery-results = "^2.5"
psycopg2-binary = "^2.9"
whitenoise = "^6.5"
gunicorn = "^21.2"
dj-database-url = "^2.0"
python-dotenv = "^1.0"
nepse = "^0.1.7"
requests = "^2.31"
pandas = "^2.1"
python-dateutil = "^2.8"
urllib3 = "<2"

[tool.poetry.group.dev.dependencies]
black = "^23.0"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"